// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages | MainPage it renders the component with data 1`] = `
<div
  className="main-page"
>
  <Header />
  <div
    className="page-container"
  >
    <SideBar />
    <EmailList />
  </div>
</div>
`;

exports[`pages | MainPage it renders the component without data 1`] = `
<div
  className="main-page"
>
  <Header />
</div>
`;
